test/attribute/fail/empty_argument_list.rs
#[proc::attribute]
fn test() -> proc::TokenStream {
    todo!()
}

fn main() {}
